show last 12 months downloads

--- a/TODO
+++ b/TODO
@@ -13,3 +13,5 @@ be more semantic: transposition instead of transpose if it is static, transpose 
                   addition for the static operator, add for the mutator
                   subtraction for the static, subtract for the mutator
                   multiplication, multiply or better multiplyBy ... the alias is mul, that is the same
+
+write src/ in es6, then use esperanto and a transpiler
