also Scalar is a Tensor

--- a/TODO
+++ b/TODO
@@ -1,7 +1,7 @@
 
-try ratio, rational numbers lib
+Real and Complex Float32Array based: create a realFieldFload32Array.js
 
-matrix calculator with angular
+try ratio, rational numbers lib
 
 docco like layout for examples, see http://g14n.info/algebra/examples/real-vector.html
 
